--- a/views/pages/view.html
+++ b/views/pages/view.html
@@ -9,6 +9,7 @@
 <img src="<?php echo '/img/'.$data['page']['image'] ?>" width="200" height="200">
 <?php } ?>
 <hr>
+<h5>Comments</h5>
 <?php
     if( $data['page']['comments'] ){
         foreach( $data['page']['comments'] as $comment ){ ?>
@@ -21,8 +22,10 @@
 
 <h3>Please, enter your comment here!</h3>
 <form method="post" action="">
-    <input type="hidden" name="post_id" value="<?=$data['page']['id']?>">
-    <input type="text" name="name">
-    <textarea name="comment"></textarea>
-    <input type="submit" value="Save Comment">
+    <div class="form-group">
+        <input type="hidden" name="post_id" value="<?=$data['page']['id']?>">
+        <input type="text" class="form-control" name="name" placeholder="Enter Your Name"><br>
+        <textarea name="comment" class="form-control" placeholder="Enter Your Comment"></textarea><br>
+        <input type="submit" class="btn btn-primary" value="Save Comment">
+    </div>
 </form>
